--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
+    "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
     "jade": "^1.11.0",
     "mongoose": "^4.7.1",
     "morgan": "^1.7.0",
+    "nodemailer": "^2.7.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0"
