--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
+    "gulp": "^3.9.1",
+    "gulp-sass": "^3.0.0",
+    "gulp-sourcemaps": "^1.9.1",
     "jade": "^1.11.0",
     "mongoose": "^4.7.1",
     "morgan": "^1.7.0",
