--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0"
+  },
+  "devDependencies": {
+    "faker": "^3.1.0"
   }
 }
