--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
+    "faker": "^3.1.0",
     "gulp": "^3.9.1",
     "gulp-sass": "^3.0.0",
     "gulp-sourcemaps": "^1.9.1",
